--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/signal-server.js" }
-  ],
-  "functions": {
-    "api/signal-server.js": {
-      "memory": 1024,
-      "maxDuration": 10
+  "builds": [
+    {
+      "src": "signal-server.js",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "signal-server.js"
+    }
+  ]
 }
